Made menu and icon fixed on small screens

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -6,12 +6,8 @@ $menu-width: $bar-width + 10;
 $menu-height: 30px;
 
 .header {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: $menu-height auto;
-  gap: 0.5em;
   height: 100vh;
-  padding: 1em;
+  padding: 0.5em 1em 1em 1em;
   background-color: var(--secondary-colour);
   background-image: url(../imgs/header.jpg);
   background-position: center;
@@ -19,30 +15,19 @@ $menu-height: 30px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  &__title {
-    grid-row: 2;
-    grid-column: 1 / -1;
-
-    @include g.breakpoint-up(medium) {
-      grid-row: 1;
-      grid-column: 2;
-    }
-  }
-
   &__lightdark {
-    grid-column: 3;
+    position: fixed;
+    top: 0.5em;
+    right: 1em;
     z-index: 2;
     cursor: pointer;
-    @include g.breakpoint-up(large) {
-      position: absolute;
-      top: 0.75em;
-      right: 1em;
-    }
   }
 
   nav {
     .menu-toggle {
-      position: relative;
+      position: fixed;
+      top: 0.5em;
+      left: 1em;
       display: grid;
       place-content: center;
       width: $menu-width;
@@ -134,7 +119,8 @@ $menu-height: 30px;
         justify-content: space-around;
         top: 0;
         left: 0;
-        width: calc(100% - 2em);
+        width: 100%;
+        padding-right: 2em;
         border-radius: 0;
         visibility: visible;
         opacity: 1;
